start branch (fixed horizontal scroll bar and minor issues) continue from here if issues

--- a/Front.css
+++ b/Front.css
@@ -3,7 +3,6 @@ body {
 }
 
 #Visio4Logo {
-    display: block;
     margin-left: auto;
     margin-right: auto;
     border-width: 100px;
@@ -29,17 +28,17 @@ body {
     font-size: 30px;
 }
 
-#Palvelut2 {
+#Palvelut {
     float: right;
     clear: both;
 }
 
-#Tuotteet2 {
+#Tuotteet {
     float: right;
     clear: both;
 }
 
-#Meistä2 {
+#Meistä {
     float: right;
     clear: both;
 }
